Wed, Apr 17, 2024, 10:27 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -59,7 +59,7 @@
                                 // add listeners to all
                                 let i = 0;
                                 for (birthday of birthdayObj) {
-                                    //let strbutton = "'#id"+birthday.id+"'";
+                                    let strbutton = "'#id"+birthday.id+"'";
                                     let strbutton = ['#id3','#id56'];
 
                                     let eventbutton = document.querySelector(strbutton[i]);
