Wed, Apr 17, 2024, 10:29 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -58,9 +58,10 @@
 
                                 // add listeners to all
                                 let i = 0;
+                                let strbutton = 
                                 for (birthday of birthdayObj) {
                                     let strbutton = "'#id"+birthday.id+"'";
-                                    let strbutton = ['#id3','#id56'];
+//                                    let strbutton = ['#id3','#id56'];
 
                                     let eventbutton = document.querySelector(strbutton[i]);
                                         eventbutton.addEventListener('click', function() {
