Wed, Apr 17, 2024, 10:30 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -58,7 +58,7 @@
 
                                 // add listeners to all
                                 let i = 0;
-                                let strbutton = 
+                                let strbutton = [];
                                 for (birthday of birthdayObj) {
                                     let strbutton = "'#id"+birthday.id+"'";
 //                                    let strbutton = ['#id3','#id56'];
