Wed, Apr 17, 2024, 10:38 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -59,7 +59,7 @@
                                 // add listeners to all
 //                                let i = 0;
 //                                let strbutton = [];
-                                for (birthday of birthdayObj) {
+                                for (let birthday of birthdayObj) {
                                     let strbutton = "'#id"+birthday.id+"'";
 
                                     let eventbutton = document.querySelector(strbutton);
