Wed, Apr 17, 2024, 10:39 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -44,7 +44,7 @@
 
                                 let html = '';
 
-                                for (birthday of birthdayObj)
+                                for (let birthday of birthdayObj)
                                 {
                                    html += `<tr>
                                                 <th>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</th>
