Wed, Apr 17, 2024, 10:40 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -60,7 +60,7 @@
 //                                let i = 0;
 //                                let strbutton = [];
                                 for (let birthday of birthdayObj) {
-                                    let strbutton = "'#id"+birthday.id+"'";
+                                    strbutton = "'#id"+birthday.id+"'";
 
                                     let eventbutton = document.querySelector(strbutton);
                                         eventbutton.addEventListener('click', function() {
