--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -57,16 +57,19 @@
                                 document.querySelector('#text').innerHTML = html;
 
                                 // add listeners to all
-                                let i = 0;
-                                let eventbutton = [];
+                                let i=0;
+                                strbutton = ['#id3', '#id56', '#id55', '#id52', '#id49'];
                                 for (let birthday of birthdayObj) {
-                                    strbutton = "'#id"+birthday.id+"'";
+//                                    strbutton = "'#id"+birthday.id+"'";
 
-                                    eventbutton[i] = document.querySelector(strbutton);
-                                        eventbutton[i].addEventListener('click', function() {
-                                            document.querySelector('#response').innerHTML = strbutton;
-                                    i++;
+
+                                    eventbutton = document.querySelector(strbutton[i]);
+                                    eventbutton.addEventListener('click', function() {
+                                        document.querySelector('#response').innerHTML = strbutton[i];
+
+
                                         });
+                                    i++;
                                 }
                             }
 
