Wed, Apr 17, 2024, 10:51 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -63,9 +63,9 @@
 //                                    strbutton = "'#id"+birthday.id+"'";
 
 
-                                    eventbutton = document.querySelector(strbutton[i]);
+                                    eventbutton = document.querySelector(strbutton[0]);
                                     eventbutton.addEventListener('click', function() {
-                                        document.querySelector('#response').innerHTML = strbutton[i];
+                                        document.querySelector('#response').innerHTML = strbutton[0];
 
 
                                         });
