Wed, Apr 17, 2024, 10:52 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -63,9 +63,9 @@
 //                                    strbutton = "'#id"+birthday.id+"'";
 
 
-                                    eventbutton = document.querySelector(strbutton[0]);
+                                    eventbutton = document.querySelector(strbutton[i]);
                                     eventbutton.addEventListener('click', function() {
-                                        document.querySelector('#response').innerHTML = strbutton[0];
+                                        document.querySelector('#response').innerHTML = strbutton[i];
 
 
                                         });
