Wed, Apr 17, 2024, 10:53 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -59,7 +59,7 @@
                                 // add listeners to all
                                 let i=0;
                                 strbutton = ['#id3', '#id56', '#id55', '#id52', '#id49'];
-                                for (let birthday of birthdayObj) {
+//                                for (let birthday of birthdayObj) {
 //                                    strbutton = "'#id"+birthday.id+"'";
 
 
@@ -68,8 +68,8 @@
                                         document.querySelector('#response').innerHTML = strbutton[i];
 
 
-                                        });
-                                    i++;
+//                                        });
+//                                    i++;
                                 }
                             }
 
