Wed, Apr 17, 2024, 10:59 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -58,7 +58,7 @@
 
                                 // add listeners to all
 //                                let i=0;
-                                strbutton = ['#id3', '#id56', '#id55', '#id52', '#id49'];
+                                strbutton = ["'#id3'", "'#id56'", '#id55', '#id52', '#id49'];
 //                                for (let birthday of birthdayObj) {
 //                                    strbutton = "'#id"+birthday.id+"'";
 
