Wed, Apr 17, 2024, 11:01 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -58,21 +58,20 @@
 
                                 // add listeners to all
 //                                let i=0;
-                                strbutton = ["'#id3'", "'#id56'", '#id55', '#id52', '#id49'];
-//                                for (let birthday of birthdayObj) {
-//                                    strbutton = "'#id"+birthday.id+"'";
-
-                                    eventbutton = document.querySelector(strbutton[0]);
+//                                strbutton = ['#id3', '#id56', '#id55', '#id52', '#id49'];
+                                for (let birthday of birthdayObj) {
+                                    strbutton = '#id'+birthday.id;
+                                    eventbutton = document.querySelector(strbutton);
                                     eventbutton.addEventListener('click', function() {
-                                        document.querySelector('#response').innerHTML = strbutton[0];
+                                        document.querySelector('#response').innerHTML = strbutton;
                                         });
 
-                                    eventbutton = document.querySelector(strbutton[1]);
-                                    eventbutton.addEventListener('click', function() {
-                                        document.querySelector('#response').innerHTML = strbutton[1];
+//                                    eventbutton = document.querySelector(strbutton[1]);
+//                                    eventbutton.addEventListener('click', function() {
+//                                        document.querySelector('#response').innerHTML = strbutton[1];
 
 
-                                        });
+                                    };
   //                                  i++;
   //                              }
                             }
