Wed, Apr 17, 2024, 11:07 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -61,7 +61,7 @@
                                     let strbutton = '#id'+birthday.id;
                                     let eventbutton = document.querySelector(strbutton);
                                     eventbutton.addEventListener('click', function() {
-                                        
+                                        delrecord(birthday.id);
                                     });
                                 };
                             }
