Thu, Apr 18, 2024, 11:01 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -47,7 +47,7 @@
 
                                 for (let birthday of birthdayObj)
                                 {
-                                    if (id === undefined)
+                                    if (id === undefined) OR (id !== birthday.id)
                                     {
                                         html += `<tr>
                                                     <th>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</th>
