Thu, Apr 18, 2024, 11:12 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -61,8 +61,8 @@
                                     else
                                     {
                                         html += `<tr>
-                                                    <th><input type="text" name="name" autofocus autocomplete=off placeholder=${birthday.name}></th>
-                                                    <th>${birthday.day} ${months[birthday.month - 1]}</th>
+                                                    <th><input id="editname" type="text" name="name" autofocus autocomplete="off" placeholder="${birthday.name}"></th>
+                                                    <th><input id="editdate" type="date" name="date" autofocus autocomplete="off" placeholder="2024-01-02"</th>
                                                     <th>
                                                         <input type="hidden" name="id" value="${birthday.id}">
                                                         <button id="edit${birthday.id}">Submit</button>
