Thu, Apr 18, 2024, 11:13 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -65,10 +65,9 @@
                                                     <th><input id="editdate" type="date" name="date" autofocus autocomplete="off" placeholder="2024-01-02"</th>
                                                     <th>
                                                         <input type="hidden" name="id" value="${birthday.id}">
-                                                        <button id="edit${birthday.id}">Submit</button>
+                                                        <button id="editsubmit">Submit</button>
                                                     </th>
                                                 </tr>`
-
                                     }
 
                                 }
