--- a/birthdays/static/styles.css
+++ b/birthdays/static/styles.css
@@ -49,7 +49,16 @@ body {
 #response {
     text-align: center;
     font-size: 20px;
+}
 
+#editname {
+    text-align: center;
+    font-size: 15px;
+}
+
+#editdate {
+    text-align: center;
+    font-size: 18px;
 }
 
 h1 {
