Thu, Apr 18, 2024, 11:21 AM +08:00

--- a/birthdays/static/styles.css
+++ b/birthdays/static/styles.css
@@ -51,12 +51,12 @@ body {
     font-size: 20px;
 }
 
-#editname {
+.nameget {
     text-align: center;
     font-size: 15px;
 }
 
-#editdate {
+.dateget {
     text-align: center;
     font-size: 18px;
 }
