--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -14,8 +14,8 @@
             <div class="section">
 
                 <h2>Add a Birthday</h2>
-                    <input id="inputname" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
-                    <input id="inputdate" type="date" name="date" required>
+                    <input class="nameget" id="inputname" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
+                    <input class="dateget" id="inputdate" type="date" name="date" required>
                     <button id="inputbutton" type="submit">Submit</button>
                 <div id="response"></div>
 
@@ -61,8 +61,8 @@
                                     else
                                     {
                                         html += `<tr>
-                                                    <th><input id="editname" type="text" name="name" autofocus autocomplete="off" placeholder="${birthday.name}"></th>
-                                                    <th><input id="editdate" type="date" name="date" autofocus autocomplete="off"</th>
+                                                    <th><input class="nameget" id="editname" type="text" name="name" autofocus autocomplete="off" placeholder="${birthday.name}"></th>
+                                                    <th><input class="dateget" id="editdate" type="date" name="date" autofocus autocomplete="off"</th>
                                                     <th>
                                                         <input type="hidden" name="id" value="${birthday.id}">
                                                         <button id="editsubmit">Submit</button>
