Thu, Apr 18, 2024, 11:23 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -64,7 +64,7 @@
                                                     <th><input class="nameget" id="editname" type="text" name="name" autofocus autocomplete="off" placeholder="${birthday.name}"></th>
                                                     <th><input class="dateget" id="editdate" type="date" name="date" autofocus autocomplete="off"</th>
                                                     <th>
-                                                        <input type="hidden" name="id" value="${birthday.id}">
+                                                        <input id="editid" type="hidden" name="id" value="${birthday.id}">
                                                         <button id="editsubmit">Submit</button>
                                                     </th>
                                                 </tr>`
