--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -75,11 +75,13 @@
 
                                 // add listeners to all
                                 for (let birthday of birthdayObj) {
-                                    let strbutton_del = '#del'+birthday.id;
-                                    let eventbutton_del = document.querySelector(strbutton_del);
-                                    eventbutton_del.addEventListener('click', function() {
-                                        delrecord(birthday.id);
-                                    });
+                                    if ((id === undefined) || (id !== birthday.id))
+                                    {
+                                        let strbutton_del = '#del'+birthday.id;
+                                        let eventbutton_del = document.querySelector(strbutton_del);
+                                        eventbutton_del.addEventListener('click', function() {
+                                            delrecord(birthday.id);
+                                        });
 
                                     let strbutton_edit = '#edit'+birthday.id;
                                     let eventbutton_edit = document.querySelector(strbutton_edit);
